* RuboCop: Fix Layout/SpaceInsideHashLiteralBraces [leila-alderman] #3780
* RuboCop: Fix Style/AndOr [leila-alderman] #3783
* Checkout V2: Support ability to pass attempt_n3d 3ds field [naashton] #3788
* Elavon: Upgrade to `processxml.do` [therufs] #3784
* Checkout V2: Support for attempt_n3d 3DS field [naashton] #3790
* Elavon: Strip ampersands [therufs] #3795

== Version 1.114.0
* BlueSnap: Add address1,address2,phone,shipping_* support #3749
* BlueSnap: Protect against `nil` metadata [carrigan] #3752
* Cybersource: [CyberSource] Ensure the default address doesn't override `ActionController::Parameters` [pi3r] #3755

== Version 1.113.0
* Orbital: Add cardIndicators field [meagabeth] #3734
* Openpay: Add Colombia to supported countries [molbrown] #3740
* Mercado Pago: Update Device Id Header field [cdmackeyfree] #3741
* RuboCop: Fix Style/TrailingCommaInHashLiteral [leila-alderman] #3718
* RuboCop: Fix Naming/PredicateName [leila-alderman] #3724
* RuboCop: Fix Style/Attr [leila-alderman] #3728
* Payflow: Use application_id to set buttonsource [britth] #3737
* HPS: Enable refunds using capture transaction [britth] #3738
* Quickbooks: Omit empty strings in address [leila-alderman] #3743
* BlueSnap: Add transactionMetaData support #3745
* Orbital: Fix typo in PC3DtlLineTot field [naashton] #3736
* Credorax: Send first and last name parameters for CFT transactions [britth] #3748
* Orbital: Update CardIndicators field to fix bug [meagabeth] #3746
* CyberSource: Always send default address [leila-alderman] #3747
* Netbanx: Reject partial refund on pending status [rockyhakjoong] #3735

== Version 1.112.0
* Cybersource: add `maestro` and `diners_club` eci brand mapping [bbraschi] #3708
* Cybersource: Ensure Partner Solution Id placement conforms to schema [britth] #3715
* Adyen: Adyen: Pass `subMerchantId` as `additionalData` [naashton] #3714
* Litle: Omit checkNum when nil [leila-alderman] #3719
* PayU Latam: Improve error response [esmitperez] #3717