@@ -40,6 +40,7 @@
 * Elavon: Upgrade to `processxml.do` [therufs] #3784
 * Checkout V2: Support for attempt_n3d 3DS field [naashton] #3790
 * Elavon: Strip ampersands [therufs] #3795
+* Cybersource: Use firstname/lastname from address instead of the payment method [pi3r] #3798
 
 == Version 1.114.0
 * BlueSnap: Add address1,address2,phone,shipping_* support #3749
